--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">MiniAirQualityStationMobileApp</string>
-    <string name="menu_main_item">Activities</string>
+    <string name="menu_main_item">Mini Air Quality</string>
+    <string name="url_menu_0">Home</string>
     <string name="url_menu_1">Configuration</string>
     <string name="url_menu_2">Data</string>
+    <string name="url_menu_3">About</string>
     <string name="openNavDrawer">Navigation Drawer Open</string>
     <string name="closeNavDrawer">Navigation Drawer Closed</string>
 </resources>
